--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,29 +1,27 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ master ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ master ]
+    branches: [ main, master ]
 jobs:
-  test:
+  playwright:
     name: 'Playwright Tests'
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright/python:v1.40.0-jammy
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.12
+          python-version: '3.12'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r local-requirements.txt
           pip install -e .
-      - name: Ensure browsers are installed
-        run: python -m playwright install --with-deps
-      - name: Run tests
+      - name: Run your tests
         run: pytest
         env:
           HOME: /root
